--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
             <span class="close">&times;</span>
             <h2>Website Notification</h2>
             <p>This website is no longer in use.</p>
+			<p>It exists only for portfolio purposes.</p>
+			<p>The Live Website is dimitrisnimas.gr</p>
         </div>
     </div>
 	
